# msp-cmake

./: README.md  msp-config.cmake  msp-toolchain.cmake
cmake/: shared.cmake  utils.cmake
cmake/gcc/: msp430.cmake
cmake/msp-gcc/: msp430.cmake
cmake/ti/: msp430.cmake
samples/: .gitignore  CMakeLists.txt
samples/01_blink_c/: CMakeLists.txt  blink.c
samples/02_blink_cpp/: CMakeLists.txt
